Test 5 - End QuadraticViewModel

--- a/QuadraticEquations.Core/QuadraticEquations.Core.csproj
+++ b/QuadraticEquations.Core/QuadraticEquations.Core.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModels\" />
+    <PackageReference Include="MvvmCross" Version="6.4.1" />
   </ItemGroup>
 
 </Project>
